# nihongo_run

./: .gitignore  Cargo.toml  NOTES.md  Trunk.toml  index.html
.github/workflows/: deploy.yml
src/: main.rs  sr.rs  supabase.rs
wasm/: index.html
