[package]
name = "nihongo_run"
version = "0.1.0"
edition = "2024"

[features]
# Trunk enables this automatically via data-cargo-features="webgl2" in index.html
webgl2 = ["bevy/webgl2"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
bevy = "0.18"
bevy_egui = "0.39.1"
bevy_rich_text3d = "0.6.0"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-compat = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ["Window"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }

# These lints may be important signals about code quality, but normal Bevy code
# commonly triggers them and the CI workflow treats them as errors, so we've
# chosen to allow them in this template.
#
# Feel free to delete the following lines.
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
